package ar.edu.uba.fi.e2;

public interface Role {
    Role promote();
}
